# backend-myhomehub

./: .gitignore  Dockerfile  HERMES.md  PRD-backend.md  README.md  migrate_data.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: database.py  main.py  models.py  schemas.py  security.py
app/routers/: auth.py  lists.py  metrics.py  transactions.py  users.py
tests/: conftest.py  test_api.py
